...
            android:inputType = "number"
            android:text="0"
            />
    </LinearLayout>

        <Button
            android:id="@+id/viewFriendsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:background="@drawable/start_button_bg_round"
            android:textColor="@color/lightText"
            android:text="View Friends" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
...
