...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewFriendsActivity">

    <Button
        android:id="@+id/addFriendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="30dp"
        android:text="+"
        tools:layout_editor_absoluteX="288dp"
...
