<resources>
    <string name="app_name">MainPage</string>
    <string name="title_home">Fitness Tracking</string>
    <string name="title_walk">Recording Walk...</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_button">Start\nWalk</string>
    <string name="end_button">End\nWalk</string>
    <string name="chart_button">View\nChart</string>
    <string name="pr_button">My\nBest</string>
    <string name="personal_best">Best:</string>
    <string name="speed">Speed:</string>
    <string name="steps">Steps</string>
    <string name="distance">Dist:</string>
    <string name="title_activity_prompt_height">PromptHeightActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="confirmHeight">Confirm</string>
    <string name="title_activity_messaging">MessagingActivity</string>


    <string-array name="motiv_quotes">
        <item>The difference between the impossible and the possible lies in a person’s determination.</item>
        <item>We are what we repeatedly do. Excellence then is not an act but a habit.</item>
        <item>If you want something you’ve never had, you must be willing to do something you’ve never done.</item>
        <item>To give anything less than your best is to sacrifice the gift.</item>
        <item>Life begins at the end of your comfort zone.</item>
        <item>Strength does not come from physical capacity. It comes from an indomitable will.</item>
        <item>Don’t count the days, make the days count.</item>
        <item>When you feel like quitting, think about why you started.</item>
    </string-array>

</resources>
